tools/sddl/assembler/tests/success/push_u32_binary.asm
push.u32 0b101010
halt
