tools/sddl/assembler/tests/fail/invalid_literal.asm
# EXPECT-ERROR: invalid integer
push.u32 xyz
halt
